--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 orjson==3.10.0
+psycopg2-binary==2.9.9
 pydantic==2.7.0
 pydantic-extra-types==2.6.0
 pydantic-settings==2.2.1
