--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,6 +41,7 @@ services:
       - ./nginx/:/etc/nginx/user_conf.d/
     depends_on:
       - web
+      - dozzle
     networks:
       - backend-network
     ports:
@@ -48,6 +49,15 @@ services:
       - "443:443"
     env_file:
       - ./.env
+
+  dozzle:
+    image: "amir20/dozzle"
+    ports:
+      - "8080:8080"
+    networks:
+      - backend-network
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
 
 networks:
   backend-network:
