--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,58 @@
+aiofiles==23.2.1
+aioredis==2.0.1
+aiosqlite==0.17.0
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
+async-timeout==4.0.3
+Babel==2.14.0
+bcrypt==4.1.2
 certifi==2024.2.2
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.1.1
+Faker==24.11.0
 fastapi==0.110.1
+fastapi-admin==1.0.4
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+iniconfig==2.0.0
+iso8601==1.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
+Mako==1.3.3
 MarkupSafe==2.1.5
 orjson==3.10.0
+packaging==24.0
+pendulum==3.0.0
+pluggy==1.4.0
 psycopg2-binary==2.9.9
 pydantic==2.7.0
 pydantic-extra-types==2.6.0
 pydantic-settings==2.2.1
 pydantic_core==2.18.1
+pypika-tortoise==0.1.6
+pytest==8.1.1
+pytest-env==1.1.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
+six==1.16.0
 sniffio==1.3.1
+SQLAlchemy==2.0.29
 starlette==0.37.2
+time-machine==2.14.1
+tortoise-orm==0.20.0
 typing_extensions==4.11.0
+tzdata==2024.1
 ujson==5.9.0
 uvicorn==0.29.0
 watchfiles==0.21.0
 websockets==12.0
-SQLAlchemy~=2.0.29
-alembic~=1.13.1
